--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
   <div class="run-timer">
     <div class="display-timer">
     </div>
-    <button class="pause-play-btn btn">&#10073; &#10073;</button>
-    <button class="set-timer-btn btn">Set Timer</button>
-    <button class="reset-btn btn">&#10227;</button>
+    <div class="buttons">
+      <button class="pause-play-btn btn">
+        <img src="icons/pause.png" class="icon">
+      </button>
+      <button class="set-timer-btn btn">Set Timer</button>
+      <button class="reset-btn btn">
+        <img src="icons/reset.png" class="icon">
+      </button>
+    </div>
   </div>
   <p class="dummy-test"></p>
   <script src="script.js"></script>
