--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     </div>
     <div class="buttons">
       <button class="pause-play-btn btn">
-        <img src="icons/pause.png" class="icon">
+        <img src="Icons/pause.png" class="icon">
       </button>
       <button class="set-timer-btn btn">Set Timer</button>
       <button class="reset-btn btn">
-        <img src="icons/reset.png" class="icon">
+        <img src="Icons/reset.png" class="icon">
       </button>
     </div>
   </div>
